validate money transfers systems all properties, ui and api